# EMUsort

./: .gitignore  .gitmodules  EMUsort.py  README.md  config_template.yaml  emu_config_template.yaml  emusort.py  env_si.yml  env_siemu.yml  environment.yml  pipeline.py  pipeline_utils.py  pyproject.toml  pyproject.toml.bak  test.ipynb
?/.java/fonts/1.8.0_202/: fcinfo-1-gpu2-Ubuntu-20.04-en.properties
channel_maps/: linear_08ch_sequential_kilosortChanMap_2um.mat  linear_16ch_sequential_kilosortChanMap_2um.mat
configs/: config_template_emu.yaml  config_template_ks4.yaml
geometries/: linear_08ch_RF400_kilosortChanMap.mat  linear_08ch_RF400_kilosortChanMap_unitSpacing.mat  linear_16ch_sequential_kilosortChanMap_unitSpacing.mat
sorting/: EMUsort_gridsearch_config.py  Kilosort_gridsearch_config.py  Kilosort_run_myo_3.m  Kilosort_run_myo_3_czuba.m  run_ks4.py
sorting/Kilosort-3.0/CUDA/: mexGPUall.m  mexMPnu8.cu
sorting/Kilosort-3.0/clustering/: final_clustering.m  template_learning.m
sorting/Kilosort-3.0/mainLoop/: extractTemplatesfromSnippets.m  trackAndSort.m
sorting/Kilosort-3.0/preProcess/: get_whitening_matrix_faster.m  isolated_peaks_multithreshold.m  preprocessDataSub.m
sorting/Kilosort-3.0/utils/: rezToPhy2.m
sorting/emg/: ETL_emg_binary.m  concatenate_emg_data.m
sorting/myomatrix/: myomatrix_binary.m
sorting/resorter/: myomatrix_call.m
src/emusort/: __init__.py  emusort.py
