[project]
name = "emusort"
dynamic = ["version"]
description = "A command line tool for high performance spike sorting of multichannel, single unit electromyography"
requires-python = ">=3.9,<3.12" # python version constrained by spikeinterface, joblib, and Phy GUI requirements. Windows Phy seems to not work with Python >= 3.10
authors = [
    { name = "Sean O'Connell", email = "smarkoco@proton.me" },
    { name = "Jonathan A Michaels", email = "jmichae@yorku.ca" },
]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
Homepage = "https://github.com/snel-repo/EMUsort"

[project.scripts]
emusort = "emusort.emusort:main" # Entry point for your command-line tool

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm", "numpy","spikeinterface","ruamel.yaml","scikit-learn","torch"]

build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.5",
]

[project.optional-dependencies]

## Below are different extras used to specify desired packages during installation.
# use "full" to install all packages necessary for optimal performance and visualization with Phy
full = [
    "matplotlib",
    "pandas",
    "ruamel.yaml",
    "pyqt5",
    "pyqtgraph",
    "pyqt5-sip",
    "pyqtwebengine",
    "phy",
    "kilosort @ file:///${PROJECT_ROOT}/src/emusort/Kilosort4",
    "spikeinterface @ file:///${PROJECT_ROOT}/src/emusort/spikeinterface",
    "torch>=2.4.0; sys_platform == 'win32' or sys_platform == 'linux'",
    "torchaudio>=2.4.0; sys_platform == 'win32' or sys_platform == 'linux'",
    "torch>=2.4.0; sys_platform == 'darwin'",
    "torchaudio>=2.4.0; sys_platform == 'darwin'",
]
# use "core" for a minimal install of emusort dependencies without pytorch
# you will also need "cpu" or "cu118", for example, running: uv sync --extra core --extra cu118
core = [
    "matplotlib",
    "pandas",
    "ruamel.yaml",
    "kilosort @ file:///${PROJECT_ROOT}/src/emusort/Kilosort4",
    "spikeinterface @ file:///${PROJECT_ROOT}/src/emusort/spikeinterface"
]
# if using the "core" extra, install the cpu version of pytorch
cpu = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
]
# if using the "core" extra, install the gpu version of pytorch
cu118 = [
    "torch>=2.4.0; sys_platform == 'win32' or sys_platform == 'linux'",
    "torchaudio>=2.4.0; sys_platform == 'win32' or sys_platform == 'linux'",
    "torch>=2.4.0; sys_platform == 'darwin'",
    "torchaudio>=2.4.0; sys_platform == 'darwin'",
]
# if using the "core" extra, install Phy for visualization
# the equivalent command to "uv sync --extra full" is "uv sync --extra core --extra cu118 --extra phy"
phy = [
    "pyqt5",
    "pyqtgraph",
    "pyqt5-sip",
    "pyqtwebengine",
    "phy",
]

[tool.setuptools.dynamic]
version = {attr = "emusort.__version__"}

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
    ],
    [
        {extra = "full"},
        {extra = "core"},
    ],
    [
        {extra = "full"},
        {extra = "phy"},
    ],
    [
        {extra = "full"},
        {extra = "cu118"},
    ],
    [
        {extra = "full"},
        {extra = "cpu"},
    ],
]
constraint-dependencies = [
    "pyqt5 >= 5.15.9; sys_platform == 'linux'",
    "pyqt5-sip >= 12.12.2; sys_platform == 'linux'",
    "qtpy >= 2.4.1; sys_platform == 'linux'",
    "pyqtwebengine > 5.15.2; sys_platform == 'linux'",
    "pyqt5-qt5 < 5.15.2; sys_platform == 'win32'",
    "pyqtwebengine < 5.15.2; sys_platform == 'win32'",
    "numcodecs < 0.16.0",
    "numpy < 2.0",
    "joblib == 1.4.2",
]

[tool.uv.sources]
# kilosort = [
#     { git = "https://github.com/snel-repo/Kilosort4.git" } # kilosort4 snel-repo 
# ]
# spikeinterface = [
#     {git = "https://github.com/snel-repo/spikeinterface.git"} # spikeinterface snel-repo 
# ]
phy = [
    {git = "https://github.com/cortex-lab/phy.git", rev = "7a2494b"} # Phy GUI
]

# Specify CPU/CUDA version for download. Also enable "full" flag to get CUDA
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cu118-full", extra = "full", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cu118-full", extra = "full", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
    
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118-full"
url = "https://download.pytorch.org/whl/cu118"
explicit = true